codespan-reporting/tests/snapshots/term__fizz_buzz__rich_no_color.snap
---
source: codespan-reporting/tests/term.rs
expression: TEST_DATA.emit_no_color(&config)
---
error[E0308]: `case` clauses have incompatible types

   ┌── FizzBuzz.fun:3:15 ───
   │
 3 │ fizz₁ : Nat → String
   │               ------ expected type `String` found here
 4 │   fizz₁ num = case (mod num 5) (mod num 3) of
   │ ╭─────────────'
 5 │ │     0 0 => "FizzBuzz"
 6 │ │     0 _ => "Fizz"
 7 │ │     _ 0 => "Buzz"
 8 │ │     _ _ => num
   │ ╰──────────────' `case` clauses have incompatible types
   ·
 8 │     _ _ => num
   │            ^^^ expected `String`, found `Nat`
   │
   = expected type `String`
        found type `Nat`

error[E0308]: `case` clauses have incompatible types

    ┌── FizzBuzz.fun:11:5 ───
    │
 11 │ ╭     case (mod num 5) (mod num 3) of
 12 │ │         0 0 => "FizzBuzz"
 13 │ │         0 _ => "Fizz"
 14 │ │         _ 0 => "Buzz"
 15 │ │         _ _ => num
    │ ╰──────────────────' `case` clauses have incompatible types
    ·
 12 │         0 0 => "FizzBuzz"
    │                ---------- this is found to be of type `String`
 13 │         0 _ => "Fizz"
    │                ------ this is found to be of type `String`
 14 │         _ 0 => "Buzz"
    │                ------ this is found to be of type `String`
 15 │         _ _ => num
    │                ^^^ expected `String`, found `Nat`
    │
    = expected type `String`
         found type `Nat`


